# ai-detector

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yaml  detector.yaml  web.yml
config/: config.schema.json  config.template.json  metadata.schema.json
config/detector/: calving-catcher.json  cow-catcher.json
config/vlm/: gemini.json
detector/: .dockerignore  .gitignore  Dockerfile  README.md  config.schema.json  pyproject.toml
detector/hooks/: hook-llama_cpp.py
detector/src/aidetector/: __init__.py  config.py  config.template.json  detections.py  detector.py  directml.py  dml.py  generate_schema.py  healthcheck.py  manager.py  onnx.py  source.py  streaming.py  utils.py  validator.py  version.py  video.py  winml.py
detector/src/aidetector/detection/: detector.py  manager.py  validator.py
detector/src/aidetector/exporters/: disk.py  exporter.py  telegram.py  webhook.py
detector/src/aidetector/hooks/: hook-llama_cpp.py  rthook_llama.py  rthook_nvidia.py
detector/src/aidetector/media/: video.py
detector/src/aidetector/services/: healthcheck.py
detector/src/aidetector/sources/: collector.py  source.py  streaming.py
detector/src/aidetector/utils/: config.py  generate_schema.py  onnx.py  version.py  winml.py
example/: compose.yml  config.json
src/aidetector/: config.py
src/aidetector/exporters/: telegram.py  webhook.py
web/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
web/patches/: @jesterkit__exe-sveltekit@0.1.7.patch
web/src/: hooks.server.ts
web/src/lib/: config-editor.ts  schema.ts  version.ts
web/src/lib/components/: app-sidebar.svelte  card-overlay.svelte  json-editor.svelte  nav-main.svelte  nav-user.svelte  types.ts
web/src/lib/components/detectors/: confidence-editor.svelte
web/src/lib/remote/: config.remote.ts  detections.remote.ts  detector.remote.ts  exporter.remote.ts  stream.remote.ts
web/src/lib/server/: ffmpeg.ts  live-streams.ts  shared-paths.ts  webrtc-preview.ts
web/src/lib/streams/: webrtc-preview-config.ts  webrtc-preview-manager.ts  webrtc-preview-types.ts
web/src/routes/: +layout.svelte
web/src/routes/(admin)/: +error.svelte  +layout.svelte  +page.server.ts
web/src/routes/(admin)/[...catchall]/: +page.ts
web/src/routes/(admin)/detections/: +page.server.ts  +page.svelte  detection-card.svelte  stream.svelte
web/src/routes/(admin)/detections/[category]/[stage]/[timestamp]/[resource]/: +server.ts
web/src/routes/(admin)/detections/[path]/: +server.ts
web/src/routes/(admin)/detections/stream/[id]/: +server.ts
web/src/routes/(admin)/detectors/: +page.svelte
web/src/routes/(admin)/detectors/add/: +page.svelte
web/src/routes/(admin)/live/: +page.svelte  stream.svelte
web/src/routes/(admin)/live/[id]/: +server.ts
web/src/routes/(admin)/live/add/: +page.svelte
web/src/routes/(admin)/notifications/: +page.svelte
web/src/routes/(admin)/notifications/add/: +page.svelte
web/src/routes/(admin)/stream/: +page.svelte  stream.svelte
web/src/routes/(admin)/stream/add/: +page.svelte
web/src/routes/(admin)/streams/: +page.svelte  stream.svelte
web/src/routes/(admin)/streams/[source]/: +server.ts
web/src/routes/(admin)/streams/add/: +page.svelte
web/src/routes/(admin)/streams/webrtc/session/: +server.ts
web/src/routes/(admin)/streams/webrtc/session/[id]/: +server.ts
web/src/routes/(admin)/system/: +page.svelte
