[project]
name = "aidetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.10",
    "ultralytics>=8.3.214",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "aidetector:main"

[dependency-groups]
dev = [
    "ruff>=0.6.2",
    "ty>=0.0.1a23",
    "pyinstaller>=6.11.1",
]
