[project]
name = "aidetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio-ffmpeg>=0.5.1",
    "litellm>=1.55.3",
    "onnx>=1.20.1",
    "opencv-stubs>=0.1.1",
    "pydantic>=2.11.10",
    "tiktoken[openai]>=0.12.0",
    "ultralytics>=8.4.4",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
default = [
    "onnxruntime>=1.24.1",
]
windowsml = [
    "onnxruntime-windowsml>=1.24.0",
]
nvidia = [
    "onnxruntime-gpu>=1.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "aidetector:main"
generate-schema = "aidetector.generate_schema:main"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.5",
    "pyinstaller>=6.17.0",
]

[tool.hatch.metadata]
allow-direct-references = true
