[project]
name = "aidetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
    "litellm>=1.81.6",
    "opencv-stubs>=0.1.1",
    "pydantic>=2.12.5",
    "tiktoken>=0.12.0",
    "ultralytics>=8.4.10",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
default = [
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
]
windowsml = [
    "onnx>=1.20.1",
    "onnxruntime-windowsml>=1.23.3",
    "wasdk-microsoft-windows-ai-machinelearning>=1.8.260209005",
    "wasdk-microsoft-windows-applicationmodel-dynamicdependency-bootstrap>=1.8.260209005",
]
nvidia = [
    "onnx>=1.20.1",
    "onnxruntime-gpu[cuda,cudnn]>=1.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "aidetector:main"
generate-schema = "aidetector.utils.generate_schema:main"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "pyinstaller>=6.18.0",
]

[tool.hatch.metadata]
allow-direct-references = true
